Release 1.3 - 04/03/2011
 - CRITICAL FIX: Fixed S-Record reading bug that was ignoring valid data
   records.
 - Added output file support by -o/--out-file option.
 - Added standard input support with "-" file argument, meaning the
   disassembler now supports piped input.
 - Improved Intel HEX8 / Motorola S-Record auto-detection by first character
   rather than file extension.
 - Thanks to Thomas for all four of the above fixes and suggestions!
 - Added printing of original opcode data alongside disassembly.

Release 1.2 - 07/28/2010
 - Added support for Baseline and Mid-Range Enhanced PIC cores.
 - Updated destination register operand formatting to print W/F instead of 0/1.
 - Renamed source files to make more sense and for better organization of code.

Release 1.1 - 07/20/2009
 - Fixed handling of newlines (sometimes found at the end of program files) so
   an "invalid record" error doesn't appear when a newline is encountered.
 - CRITICAL FIX: Fixed reading and disassembly of odd byte length records in
   Intel HEX8 and Motorola S-Record files. Special thanks to Ahmed for
   discovery and patch!
 - Fixed a few small bugs/typos for cleaner compilation.

Release 1.0 - 01/06/2007
 - Initial release.