@@ -60,15 +60,17 @@
  * FORMAT_OPTION_LITERAL_BIN: Represent the literal operands in binary
  * FORMAT_OPTION_LITERAL_DEC: Represent the literal operands in decimal
  * FORMAT_OPTION_LITERAL_ASCII_COMMENT: Show the ASCII value of the literal with a comment
+ * FORMAT_OPTION_ORIGINAL_OPCODE: Print original opcodes alongside disassembly
  */
 enum PIC_Formatting_Options {
-	FORMAT_OPTION_ADDRESS_LABEL = 1,
-	FORMAT_OPTION_ADDRESS = 2,
-	FORMAT_OPTION_DESTINATION_ADDRESS_COMMENT = 4,
-	FORMAT_OPTION_LITERAL_HEX = 8,
-	FORMAT_OPTION_LITERAL_BIN = 16,
-	FORMAT_OPTION_LITERAL_DEC = 32,
-	FORMAT_OPTION_LITERAL_ASCII_COMMENT = 64,
+	FORMAT_OPTION_ADDRESS_LABEL 			= (1<<0),
+	FORMAT_OPTION_ADDRESS 				= (1<<1),
+	FORMAT_OPTION_DESTINATION_ADDRESS_COMMENT 	= (1<<2),
+	FORMAT_OPTION_LITERAL_HEX 			= (1<<3),
+	FORMAT_OPTION_LITERAL_BIN 			= (1<<4),
+	FORMAT_OPTION_LITERAL_DEC 			= (1<<5),
+	FORMAT_OPTION_LITERAL_ASCII_COMMENT 		= (1<<6),
+	FORMAT_OPTION_ORIGINAL_OPCODE			= (1<<7),
 };
 
 /* Structure to hold various formatting options supported
@@ -87,6 +89,6 @@ typedef struct _formattingOptions formattingOptions;
 
 
 /* Prints a disassembled instruction, formatted with options set in the formattingOptions structure. */
-int printDisassembledInstruction(FILE *out, const disassembledInstruction *dInstruction, formattingOptions fOptions);
+int printDisassembledInstruction(FILE *out, const assembledInstruction *aInstruction, const disassembledInstruction *dInstruction, formattingOptions fOptions);
 
 #endif
